// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`autocompleteTermSuggestions autocomplete within query for |(is:blue jun)| with caret at position 11 1`] = `
Array [
  Object {
    "highlightRange": Array [
      9,
      17,
    ],
    "query": "(is:blue tag:junk)",
    "type": 3,
  },
]
`;

exports[`autocompleteTermSuggestions autocomplete within query for |is:bow is:void| with caret at position 11 1`] = `
Array [
  Object {
    "highlightRange": Array [
      7,
      14,
    ],
    "query": "is:bow is:void",
    "type": 3,
  },
]
`;

exports[`autocompleteTermSuggestions autocomplete within query for |is:haspower is:b| with caret at position 16 1`] = `
Array [
  Object {
    "highlightRange": Array [
      12,
      18,
    ],
    "query": "is:haspower is:bow",
    "type": 3,
  },
  Object {
    "highlightRange": Array [
      12,
      19,
    ],
    "query": "is:haspower is:blue",
    "type": 3,
  },
]
`;

exports[`filterComplete autocomplete terms for |is:b| 1`] = `
Array [
  "is:bow",
  "is:blue",
]
`;

exports[`filterComplete autocomplete terms for |jun| 1`] = `
Array [
  "tag:junk",
]
`;

exports[`filterComplete autocomplete terms for |sni| 1`] = `
Array [
  "is:sniperrifle",
  "not:sniperrifle",
]
`;

exports[`filterComplete autocomplete terms for |stat:| 1`] = `
Array [
  "stat:",
  "stat:rpm:",
  "stat:any:",
  "stat:zoom:",
  "stat:range:",
  "stat:total:",
  "stat:charge:",
  "stat:impact:",
  "stat:reload:",
  "stat:custom:",
  "stat:magazine:",
  "stat:handling:",
  "stat:velocity:",
  "stat:strength:",
  "stat:mobility:",
  "stat:recovery:",
  "stat:drawtime:",
  "stat:stability:",
  "stat:aimassist:",
  "stat:intellect:",
  "stat:equipspeed:",
  "stat:discipline:",
  "stat:resilience:",
  "stat:blastradius:",
  "stat:inventorysize:",
  "stat:recoildirection:",
  "stat:rpm:<",
  "stat:rpm:>",
  "stat:rpm:=",
  "stat:any:<",
  "stat:any:>",
  "stat:any:=",
  "stat:zoom:<",
  "stat:zoom:>",
  "stat:zoom:=",
  "stat:rpm:<=",
  "stat:rpm:>=",
  "stat:any:<=",
  "stat:any:>=",
  "stat:range:<",
  "stat:range:>",
  "stat:range:=",
  "stat:zoom:<=",
  "stat:zoom:>=",
  "stat:total:<",
  "stat:total:>",
  "stat:total:=",
  "stat:charge:<",
  "stat:charge:>",
  "stat:charge:=",
  "stat:impact:<",
  "stat:impact:>",
  "stat:impact:=",
  "stat:range:<=",
  "stat:range:>=",
  "stat:reload:<",
  "stat:reload:>",
  "stat:reload:=",
  "stat:total:<=",
  "stat:total:>=",
  "stat:custom:<",
  "stat:custom:>",
  "stat:custom:=",
  "stat:charge:<=",
  "stat:charge:>=",
  "stat:impact:<=",
  "stat:impact:>=",
  "stat:reload:<=",
  "stat:reload:>=",
  "stat:custom:<=",
  "stat:custom:>=",
  "stat:magazine:<",
  "stat:magazine:>",
  "stat:magazine:=",
  "stat:handling:<",
  "stat:handling:>",
  "stat:handling:=",
  "stat:velocity:<",
  "stat:velocity:>",
  "stat:velocity:=",
  "stat:strength:<",
  "stat:strength:>",
  "stat:strength:=",
  "stat:mobility:<",
  "stat:mobility:>",
  "stat:mobility:=",
  "stat:recovery:<",
  "stat:recovery:>",
  "stat:recovery:=",
  "stat:drawtime:<",
  "stat:drawtime:>",
  "stat:drawtime:=",
  "stat:stability:<",
  "stat:stability:>",
  "stat:stability:=",
  "stat:magazine:<=",
  "stat:magazine:>=",
  "stat:aimassist:<",
  "stat:aimassist:>",
  "stat:aimassist:=",
  "stat:handling:<=",
  "stat:handling:>=",
  "stat:velocity:<=",
  "stat:velocity:>=",
  "stat:intellect:<",
  "stat:intellect:>",
  "stat:intellect:=",
  "stat:strength:<=",
  "stat:strength:>=",
  "stat:mobility:<=",
  "stat:mobility:>=",
  "stat:recovery:<=",
  "stat:recovery:>=",
  "stat:drawtime:<=",
  "stat:drawtime:>=",
  "stat:stability:<=",
  "stat:stability:>=",
  "stat:aimassist:<=",
  "stat:aimassist:>=",
  "stat:equipspeed:<",
  "stat:equipspeed:>",
  "stat:equipspeed:=",
  "stat:discipline:<",
  "stat:discipline:>",
  "stat:discipline:=",
  "stat:intellect:<=",
  "stat:intellect:>=",
  "stat:resilience:<",
  "stat:resilience:>",
  "stat:resilience:=",
  "stat:equipspeed:<=",
  "stat:equipspeed:>=",
  "stat:blastradius:<",
  "stat:blastradius:>",
  "stat:blastradius:=",
  "stat:discipline:<=",
  "stat:discipline:>=",
  "stat:resilience:<=",
  "stat:resilience:>=",
  "stat:blastradius:<=",
  "stat:blastradius:>=",
  "stat:inventorysize:<",
  "stat:inventorysize:>",
  "stat:inventorysize:=",
  "stat:inventorysize:<=",
  "stat:inventorysize:>=",
  "stat:recoildirection:<",
  "stat:recoildirection:>",
  "stat:recoildirection:=",
  "stat:recoildirection:<=",
  "stat:recoildirection:>=",
]
`;

exports[`filterComplete autocomplete terms for |stat:mob| 1`] = `
Array [
  "stat:mobility:",
  "stat:mobility:<",
  "stat:mobility:>",
  "stat:mobility:=",
  "stat:mobility:<=",
  "stat:mobility:>=",
]
`;

exports[`filterComplete autocomplete terms for |stat| 1`] = `
Array [
  "stat:",
  "basestat:",
  "maxbasestatvalue:",
  "maxstatvalue:",
  "maxstatloadout:",
  "stat:rpm:",
  "stat:any:",
  "stat:zoom:",
  "stat:range:",
  "stat:total:",
  "stat:charge:",
  "stat:impact:",
  "stat:reload:",
  "stat:custom:",
  "stat:magazine:",
  "stat:handling:",
  "stat:velocity:",
  "stat:strength:",
  "stat:mobility:",
  "stat:recovery:",
  "stat:drawtime:",
  "stat:stability:",
  "stat:aimassist:",
  "stat:intellect:",
  "stat:equipspeed:",
  "stat:discipline:",
  "stat:resilience:",
  "stat:blastradius:",
  "stat:inventorysize:",
  "stat:recoildirection:",
  "basestat:any:",
  "basestat:total:",
  "basestat:custom:",
  "basestat:mobility:",
  "basestat:recovery:",
  "basestat:strength:",
  "basestat:intellect:",
  "basestat:resilience:",
  "basestat:discipline:",
  "maxbasestatvalue:any",
  "maxstatvalue:any",
  "maxbasestatvalue:total",
  "maxstatvalue:total",
  "maxstatloadout:any",
  "maxbasestatvalue:custom",
  "maxstatvalue:custom",
  "maxstatloadout:total",
  "maxbasestatvalue:mobility",
  "maxbasestatvalue:recovery",
  "maxbasestatvalue:strength",
  "maxstatvalue:mobility",
  "maxstatvalue:recovery",
  "maxstatvalue:strength",
  "maxstatloadout:custom",
  "maxbasestatvalue:intellect",
  "maxstatvalue:intellect",
  "maxbasestatvalue:resilience",
  "maxbasestatvalue:discipline",
  "maxstatvalue:resilience",
  "maxstatvalue:discipline",
  "maxstatloadout:mobility",
  "maxstatloadout:recovery",
  "maxstatloadout:strength",
  "maxstatloadout:intellect",
  "maxstatloadout:resilience",
  "maxstatloadout:discipline",
  "stat:rpm:<",
  "stat:rpm:>",
  "stat:rpm:=",
  "stat:any:<",
  "stat:any:>",
  "stat:any:=",
  "stat:zoom:<",
  "stat:zoom:>",
  "stat:zoom:=",
  "stat:rpm:<=",
  "stat:rpm:>=",
  "stat:any:<=",
  "stat:any:>=",
  "stat:range:<",
  "stat:range:>",
  "stat:range:=",
  "stat:zoom:<=",
  "stat:zoom:>=",
  "stat:total:<",
  "stat:total:>",
  "stat:total:=",
  "stat:charge:<",
  "stat:charge:>",
  "stat:charge:=",
  "stat:impact:<",
  "stat:impact:>",
  "stat:impact:=",
  "stat:range:<=",
  "stat:range:>=",
  "stat:reload:<",
  "stat:reload:>",
  "stat:reload:=",
  "stat:total:<=",
  "stat:total:>=",
  "stat:custom:<",
  "stat:custom:>",
  "stat:custom:=",
  "stat:charge:<=",
  "stat:charge:>=",
  "stat:impact:<=",
  "stat:impact:>=",
  "stat:reload:<=",
  "stat:reload:>=",
  "stat:custom:<=",
  "stat:custom:>=",
  "stat:magazine:<",
  "stat:magazine:>",
  "stat:magazine:=",
  "stat:handling:<",
  "stat:handling:>",
  "stat:handling:=",
  "stat:velocity:<",
  "stat:velocity:>",
  "stat:velocity:=",
  "stat:strength:<",
  "stat:strength:>",
  "stat:strength:=",
  "stat:mobility:<",
  "stat:mobility:>",
  "stat:mobility:=",
  "stat:recovery:<",
  "stat:recovery:>",
  "stat:recovery:=",
  "stat:drawtime:<",
  "stat:drawtime:>",
  "stat:drawtime:=",
  "stat:stability:<",
  "stat:stability:>",
  "stat:stability:=",
  "stat:magazine:<=",
  "stat:magazine:>=",
  "stat:aimassist:<",
  "stat:aimassist:>",
  "stat:aimassist:=",
  "stat:handling:<=",
  "stat:handling:>=",
  "stat:velocity:<=",
  "stat:velocity:>=",
  "stat:intellect:<",
  "stat:intellect:>",
  "stat:intellect:=",
  "stat:strength:<=",
  "stat:strength:>=",
  "stat:mobility:<=",
  "stat:mobility:>=",
  "stat:recovery:<=",
  "stat:recovery:>=",
  "stat:drawtime:<=",
  "stat:drawtime:>=",
  "stat:stability:<=",
  "stat:stability:>=",
  "stat:aimassist:<=",
  "stat:aimassist:>=",
  "stat:equipspeed:<",
  "stat:equipspeed:>",
  "stat:equipspeed:=",
  "stat:discipline:<",
  "stat:discipline:>",
  "stat:discipline:=",
  "stat:intellect:<=",
  "stat:intellect:>=",
  "stat:resilience:<",
  "stat:resilience:>",
  "stat:resilience:=",
  "stat:equipspeed:<=",
  "stat:equipspeed:>=",
  "stat:blastradius:<",
  "stat:blastradius:>",
  "stat:blastradius:=",
  "stat:discipline:<=",
  "stat:discipline:>=",
  "stat:resilience:<=",
  "stat:resilience:>=",
  "stat:blastradius:<=",
  "stat:blastradius:>=",
  "stat:inventorysize:<",
  "stat:inventorysize:>",
  "stat:inventorysize:=",
  "stat:inventorysize:<=",
  "stat:inventorysize:>=",
  "stat:recoildirection:<",
  "stat:recoildirection:>",
  "stat:recoildirection:=",
  "stat:recoildirection:<=",
  "stat:recoildirection:>=",
  "basestat:any:<",
  "basestat:any:>",
  "basestat:any:=",
  "basestat:any:<=",
  "basestat:any:>=",
  "basestat:total:<",
  "basestat:total:>",
  "basestat:total:=",
  "basestat:total:<=",
  "basestat:total:>=",
  "basestat:custom:<",
  "basestat:custom:>",
  "basestat:custom:=",
  "basestat:custom:<=",
  "basestat:custom:>=",
  "basestat:mobility:<",
  "basestat:mobility:>",
  "basestat:mobility:=",
  "basestat:recovery:<",
  "basestat:recovery:>",
  "basestat:recovery:=",
  "basestat:strength:<",
  "basestat:strength:>",
  "basestat:strength:=",
  "basestat:mobility:<=",
  "basestat:mobility:>=",
  "basestat:recovery:<=",
  "basestat:recovery:>=",
  "basestat:intellect:<",
  "basestat:intellect:>",
  "basestat:intellect:=",
  "basestat:strength:<=",
  "basestat:strength:>=",
  "basestat:resilience:<",
  "basestat:resilience:>",
  "basestat:resilience:=",
  "basestat:discipline:<",
  "basestat:discipline:>",
  "basestat:discipline:=",
  "basestat:intellect:<=",
  "basestat:intellect:>=",
  "basestat:resilience:<=",
  "basestat:resilience:>=",
  "basestat:discipline:<=",
  "basestat:discipline:>=",
]
`;

exports[`filterSortRecentSearches filter/sort recent searches for query || 1`] = `
Array [
  "recent saved",
  "yearold saved",
  "0 days old, 9 uses",
  "0 days old, 8 uses",
  "dayold highuse",
  "0 days old, 7 uses",
  "1 days old, 9 uses",
  "1 days old, 8 uses",
  "0 days old, 6 uses",
  "1 days old, 7 uses",
  "2 days old, 9 uses",
  "2 days old, 8 uses",
  "1 days old, 6 uses",
  "2 days old, 7 uses",
  "3 days old, 9 uses",
  "0 days old, 5 uses",
  "3 days old, 8 uses",
  "2 days old, 6 uses",
  "3 days old, 7 uses",
  "4 days old, 9 uses",
  "1 days old, 5 uses",
  "4 days old, 8 uses",
  "3 days old, 6 uses",
  "4 days old, 7 uses",
  "5 days old, 9 uses",
  "2 days old, 5 uses",
  "5 days old, 8 uses",
  "4 days old, 6 uses",
  "0 days old, 4 uses",
  "5 days old, 7 uses",
  "6 days old, 9 uses",
  "3 days old, 5 uses",
  "6 days old, 8 uses",
  "5 days old, 6 uses",
  "1 days old, 4 uses",
  "6 days old, 7 uses",
  "7 days old, 9 uses",
  "4 days old, 5 uses",
  "7 days old, 8 uses",
  "6 days old, 6 uses",
  "2 days old, 4 uses",
  "7 days old, 7 uses",
  "8 days old, 9 uses",
  "5 days old, 5 uses",
  "8 days old, 8 uses",
  "7 days old, 6 uses",
  "3 days old, 4 uses",
  "8 days old, 7 uses",
  "9 days old, 9 uses",
  "6 days old, 5 uses",
  "9 days old, 8 uses",
  "8 days old, 6 uses",
  "4 days old, 4 uses",
  "9 days old, 7 uses",
  "10 days old, 9 uses",
  "0 days old, 3 uses",
  "7 days old, 5 uses",
  "10 days old, 8 uses",
  "9 days old, 6 uses",
  "5 days old, 4 uses",
  "10 days old, 7 uses",
  "11 days old, 9 uses",
  "1 days old, 3 uses",
  "8 days old, 5 uses",
  "11 days old, 8 uses",
  "10 days old, 6 uses",
  "6 days old, 4 uses",
  "11 days old, 7 uses",
  "12 days old, 9 uses",
  "2 days old, 3 uses",
  "9 days old, 5 uses",
  "12 days old, 8 uses",
  "11 days old, 6 uses",
  "7 days old, 4 uses",
  "12 days old, 7 uses",
  "13 days old, 9 uses",
  "3 days old, 3 uses",
  "10 days old, 5 uses",
  "13 days old, 8 uses",
  "12 days old, 6 uses",
  "8 days old, 4 uses",
  "13 days old, 7 uses",
  "14 days old, 9 uses",
  "4 days old, 3 uses",
  "11 days old, 5 uses",
  "14 days old, 8 uses",
  "13 days old, 6 uses",
  "9 days old, 4 uses",
  "14 days old, 7 uses",
  "15 days old, 9 uses",
  "5 days old, 3 uses",
  "12 days old, 5 uses",
  "15 days old, 8 uses",
  "14 days old, 6 uses",
  "10 days old, 4 uses",
  "15 days old, 7 uses",
  "16 days old, 9 uses",
  "6 days old, 3 uses",
  "13 days old, 5 uses",
  "16 days old, 8 uses",
  "15 days old, 6 uses",
  "11 days old, 4 uses",
  "16 days old, 7 uses",
  "17 days old, 9 uses",
  "7 days old, 3 uses",
  "14 days old, 5 uses",
  "17 days old, 8 uses",
  "0 days old, 2 uses",
  "16 days old, 6 uses",
  "12 days old, 4 uses",
  "17 days old, 7 uses",
  "18 days old, 9 uses",
  "8 days old, 3 uses",
  "15 days old, 5 uses",
  "18 days old, 8 uses",
  "1 days old, 2 uses",
  "17 days old, 6 uses",
  "13 days old, 4 uses",
  "18 days old, 7 uses",
  "19 days old, 9 uses",
  "9 days old, 3 uses",
  "16 days old, 5 uses",
  "19 days old, 8 uses",
  "2 days old, 2 uses",
  "18 days old, 6 uses",
  "14 days old, 4 uses",
  "19 days old, 7 uses",
  "20 days old, 9 uses",
  "10 days old, 3 uses",
  "17 days old, 5 uses",
  "20 days old, 8 uses",
  "3 days old, 2 uses",
  "19 days old, 6 uses",
  "15 days old, 4 uses",
  "20 days old, 7 uses",
  "21 days old, 9 uses",
  "11 days old, 3 uses",
  "18 days old, 5 uses",
  "21 days old, 8 uses",
  "4 days old, 2 uses",
  "20 days old, 6 uses",
  "16 days old, 4 uses",
  "21 days old, 7 uses",
  "22 days old, 9 uses",
  "12 days old, 3 uses",
  "19 days old, 5 uses",
  "22 days old, 8 uses",
  "5 days old, 2 uses",
  "21 days old, 6 uses",
  "17 days old, 4 uses",
  "22 days old, 7 uses",
  "23 days old, 9 uses",
  "13 days old, 3 uses",
  "20 days old, 5 uses",
  "23 days old, 8 uses",
  "6 days old, 2 uses",
  "22 days old, 6 uses",
  "18 days old, 4 uses",
  "23 days old, 7 uses",
  "24 days old, 9 uses",
  "14 days old, 3 uses",
  "21 days old, 5 uses",
  "24 days old, 8 uses",
  "7 days old, 2 uses",
  "23 days old, 6 uses",
  "19 days old, 4 uses",
  "24 days old, 7 uses",
  "25 days old, 9 uses",
  "15 days old, 3 uses",
  "22 days old, 5 uses",
  "25 days old, 8 uses",
  "8 days old, 2 uses",
  "24 days old, 6 uses",
  "20 days old, 4 uses",
  "25 days old, 7 uses",
  "26 days old, 9 uses",
  "16 days old, 3 uses",
  "23 days old, 5 uses",
  "26 days old, 8 uses",
  "9 days old, 2 uses",
  "25 days old, 6 uses",
  "21 days old, 4 uses",
  "26 days old, 7 uses",
  "27 days old, 9 uses",
  "17 days old, 3 uses",
  "24 days old, 5 uses",
  "27 days old, 8 uses",
  "10 days old, 2 uses",
  "26 days old, 6 uses",
  "22 days old, 4 uses",
  "27 days old, 7 uses",
  "28 days old, 9 uses",
  "18 days old, 3 uses",
  "25 days old, 5 uses",
  "28 days old, 8 uses",
  "11 days old, 2 uses",
  "27 days old, 6 uses",
  "23 days old, 4 uses",
  "28 days old, 7 uses",
  "29 days old, 9 uses",
  "19 days old, 3 uses",
  "26 days old, 5 uses",
  "29 days old, 8 uses",
  "12 days old, 2 uses",
  "28 days old, 6 uses",
  "24 days old, 4 uses",
  "29 days old, 7 uses",
  "20 days old, 3 uses",
  "27 days old, 5 uses",
  "13 days old, 2 uses",
  "29 days old, 6 uses",
  "25 days old, 4 uses",
  "21 days old, 3 uses",
  "28 days old, 5 uses",
  "14 days old, 2 uses",
  "26 days old, 4 uses",
  "22 days old, 3 uses",
  "29 days old, 5 uses",
  "15 days old, 2 uses",
  "27 days old, 4 uses",
  "0 days old, 1 uses",
  "23 days old, 3 uses",
  "16 days old, 2 uses",
  "28 days old, 4 uses",
  "1 days old, 1 uses",
  "24 days old, 3 uses",
  "17 days old, 2 uses",
  "29 days old, 4 uses",
  "2 days old, 1 uses",
  "25 days old, 3 uses",
  "18 days old, 2 uses",
  "3 days old, 1 uses",
  "26 days old, 3 uses",
  "19 days old, 2 uses",
  "4 days old, 1 uses",
  "27 days old, 3 uses",
  "20 days old, 2 uses",
  "5 days old, 1 uses",
  "28 days old, 3 uses",
  "21 days old, 2 uses",
  "6 days old, 1 uses",
  "29 days old, 3 uses",
  "22 days old, 2 uses",
  "7 days old, 1 uses",
  "23 days old, 2 uses",
  "8 days old, 1 uses",
  "24 days old, 2 uses",
  "9 days old, 1 uses",
  "25 days old, 2 uses",
  "10 days old, 1 uses",
  "26 days old, 2 uses",
  "11 days old, 1 uses",
  "27 days old, 2 uses",
  "12 days old, 1 uses",
  "28 days old, 2 uses",
  "13 days old, 1 uses",
  "29 days old, 2 uses",
  "14 days old, 1 uses",
  "15 days old, 1 uses",
  "16 days old, 1 uses",
  "17 days old, 1 uses",
  "18 days old, 1 uses",
  "19 days old, 1 uses",
  "20 days old, 1 uses",
  "21 days old, 1 uses",
  "22 days old, 1 uses",
  "23 days old, 1 uses",
  "24 days old, 1 uses",
  "25 days old, 1 uses",
  "26 days old, 1 uses",
  "27 days old, 1 uses",
  "28 days old, 1 uses",
  "29 days old, 1 uses",
  "yearold highuse",
  "yearold unsaved",
  "dim api autosuggest",
]
`;

exports[`filterSortRecentSearches filter/sort recent searches for query |high| 1`] = `
Array [
  "dayold highuse",
  "yearold highuse",
]
`;
